added my_profile and update_bio endpoints
