# api_gateway/docs/swagger.json
@@ -33,6 +33,26 @@
                 "responses": {}
             }
         },
+        "/auth/my_profile": {
+            "get": {
+                "security": [
+                    {
+                        "Token": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Обновление пароля",
+                "responses": {}
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "consumes": [
@@ -216,7 +236,7 @@
                 "tags": [
                     "profile"
                 ],
-                "summary": "Обновить nickname",
+                "summary": "Обновить bio",
                 "parameters": [
                     {
                         "description": "Данные для обновления профиля",
